dnl Process this file with autoconf to produce a configure script.
AC_INIT(gtk/gcit.c)
AM_INIT_AUTOMAKE(gcit, 0.1)

dnl Checks for programs.
AM_PROG_LIBTOOL
test "$GCC" = yes && XTRA_CFLAGS='-Wall -Wstrict-prototypes'
AC_SUBST(XTRA_CFLAGS)

dnl Checks for libraries.
AM_PATH_GDK_IMLIB
AM_PATH_GLIB
AM_PATH_GTK

dnl Checks for header files.
dnl AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.
dnl AC_FUNC_VPRINTF
dnl AC_CHECK_FUNCS(socket strdup strtol uname)

AM_CONFIG_HEADER(config.h)
AC_OUTPUT(libcli_cit/Makefile gtk/Makefile Makefile)
